--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-lg-offset-3">
-          <h4>NEW A WEBSITE?</h4>
-          <h1>CONTACT US</h1>
+          <h4></h4>
+          <h1>CONTACT ME</h1>
         </div>
       </div>
     </div>
