--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="index.html">INSTANT</a>
+        <a class="navbar-brand" href="index.html">Roya Moussapour</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -62,9 +62,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-lg-offset-3">
-          <h4>HELLO PEOPLE, MY NAME IS</h4>
-          <h1>PAUL SILVA</h1>
-          <h4>WEB DESIGNER, DEVELOPER & GAME ADDICT</h4>
+          <h4></h4>
+          <h1>ROYA MOUSSAPOUR</h1>
+          <h4>[[ INSERT BUZZWORDS HERE ]]</h4>
         </div>
       </div>
     </div>
