--- a/about.html
+++ b/about.html
@@ -72,9 +72,8 @@
     <div class="row centered mt mb">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Roya Moussapour</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-          It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-        <p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <p>Hi! I'm Roya. I'm a 2017 Bowdoin grad working in Boston, passionate about education, technology, data visualizations, and music. I currently work at Compass Lexecon as a data analyst, spending most of my time working in our airlines practice and geeking out about Tableau. </p>
+        <p>At <a href="https://www.bowdoin.edu/" target="blank">Bowdoin College</a>, I majored in physics and minored in education. I was concertmaster of the Bowdoin Chamber Orchestra and business director of <a href="http://students.bowdoin.edu/miscellania/" target="blank">Miscellania</a>, Bowdoin's oldest all-women's a cappella group. </p>
         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
       </div>
 
