--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Instant - Bootstrap Personal Template</title>
+  <title>Roya Moussapour</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -43,14 +43,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="index.html">INSTANT</a>
+        <a class="navbar-brand" href="index.html">Roya Moussapour</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html">Home</a></li>
           <li class="active"><a href="about.html">About</a></li>
           <li><a href="works.html" class="smoothscroll">Works</a></li>
-          <li><a href="contact.html" class="smoothscroll">Contact</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
@@ -74,7 +73,8 @@
         <h2>Roya Moussapour</h2>
         <p>Hi! I'm Roya. I'm a 2017 Bowdoin grad working in Boston, passionate about education, technology, data visualizations, and music. I currently work at Compass Lexecon as a data analyst, spending most of my time working in our airlines practice and geeking out about Tableau. </p>
         <p>At <a href="https://www.bowdoin.edu/" target="blank">Bowdoin College</a>, I majored in physics and minored in education. I was concertmaster of the Bowdoin Chamber Orchestra and business director of <a href="http://students.bowdoin.edu/miscellania/" target="blank">Miscellania</a>, Bowdoin's oldest all-women's a cappella group. </p>
-        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+        <p>I've been fortunate enough to travel to 29 countries and spent a semester abroad in Madrid studying at <a href="https://www.uc3m.es/Home" target="blank">Universidad Carlos III de Madrid</a>. I spent my academic summers at Bowdoin, in Huntsville, AL working for <a href="https://www.nasa.gov/centers/marshall/home/index.html" target="blank">NASA</a> on satellite design, and in D.C. at <a href="https://bateswhite.com" target="blank">Bates White Economic Consulting</a>.</p>
+        <p>I'm originally from Westchester County, NY, but have been thrilled to make New England my home for the last 5 years (and counting!). I've found an incredible community of like-minded musicians here in the <a href="https://me2orchestra.org/" target="blank">Me2/Orchestra</a>, and other than the occasional travel bug, I'm aiming to put down stronger roots in New England for the foreseeable future. </p>
       </div>
 
     </div>
@@ -83,23 +83,12 @@
   <div id="social">
     <div class="container">
       <div class="row centered">
-        <div class="col-lg-2">
-          <a href="#"><i class="fa fa-dribbble"></i></a>
-        </div>
-        <div class="col-lg-2">
-          <a href="#"><i class="fa fa-facebook"></i></a>
         </div>
         <div class="col-lg-2">
           <a href="#"><i class="fa fa-twitter"></i></a>
         </div>
         <div class="col-lg-2">
           <a href="#"><i class="fa fa-linkedin"></i></a>
-        </div>
-        <div class="col-lg-2">
-          <a href="#"><i class="fa fa-instagram"></i></a>
-        </div>
-        <div class="col-lg-2">
-          <a href="#"><i class="fa fa-tumblr"></i></a>
         </div>
 
       </div>
@@ -109,7 +98,7 @@
   <div id="copyrights">
     <div class="container">
       <p>
-        &copy; Copyrights <strong>Instant</strong>. All Rights Reserved
+        &copy; Copyright <strong>Instant</strong>. All Rights Reserved
       </p>
       <div class="credits">
         <!--
