--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Instant - Bootstrap Personal Template</title>
+  <title>Roya Moussapour</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -101,22 +101,10 @@
     <div class="container">
       <div class="row centered">
         <div class="col-lg-2">
-          <a href="#"><i class="fa fa-dribbble"></i></a>
-        </div>
-        <div class="col-lg-2">
-          <a href="#"><i class="fa fa-facebook"></i></a>
-        </div>
-        <div class="col-lg-2">
           <a href="#"><i class="fa fa-twitter"></i></a>
         </div>
         <div class="col-lg-2">
           <a href="#"><i class="fa fa-linkedin"></i></a>
-        </div>
-        <div class="col-lg-2">
-          <a href="#"><i class="fa fa-instagram"></i></a>
-        </div>
-        <div class="col-lg-2">
-          <a href="#"><i class="fa fa-tumblr"></i></a>
         </div>
 
       </div>
@@ -126,7 +114,7 @@
   <div id="copyrights">
     <div class="container">
       <p>
-        &copy; Copyrights <strong>Instant</strong>. All Rights Reserved
+        &copy; Copyright <strong>Instant</strong>. All Rights Reserved
       </p>
       <div class="credits">
         <!--
