--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
   <div id="social">
     <div class="container">
       <div class="row centered">
-        <div class="col-lg-2">
+        <div class="col-sm-4">
           <a href="#"><i class="fa fa-twitter"></i></a>
         </div>
-        <div class="col-lg-2">
+        <div class="col-sm-4">
           <a href="#"><i class="fa fa-linkedin"></i></a>
         </div>
 
