--- a/about.html
+++ b/about.html
@@ -84,10 +84,10 @@
     <div class="container">
       <div class="row centered">
         </div>
-        <div class="col-lg-2">
+        <div class="col-sm-4">
           <a href="#"><i class="fa fa-twitter"></i></a>
         </div>
-        <div class="col-lg-2">
+        <div class="col-sm-4">
           <a href="#"><i class="fa fa-linkedin"></i></a>
         </div>
 
