--- a/works.html
+++ b/works.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Instant - Bootstrap Personal Template</title>
+  <title>Roya Moussapour</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -50,7 +50,6 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li class="active"><a href="works.html" class="smoothscroll">Works</a></li>
-          <li><a href="contact.html" class="smoothscroll">Contact</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
@@ -91,24 +90,13 @@
   <div id="social">
     <div class="container">
       <div class="row centered">
-        <div class="col-lg-2">
-          <a href="#"><i class="fa fa-dribbble"></i></a>
-        </div>
-        <div class="col-lg-2">
+        <div class="col-sm-4">
           <a href="#"><i class="fa fa-facebook"></i></a>
         </div>
-        <div class="col-lg-2">
+        <div class="col-sm-4">
           <a href="#"><i class="fa fa-twitter"></i></a>
         </div>
-        <div class="col-lg-2">
-          <a href="#"><i class="fa fa-linkedin"></i></a>
-        </div>
-        <div class="col-lg-2">
-          <a href="#"><i class="fa fa-instagram"></i></a>
-        </div>
-        <div class="col-lg-2">
-          <a href="#"><i class="fa fa-tumblr"></i></a>
-        </div>
+
 
       </div>
     </div>
@@ -117,7 +105,7 @@
   <div id="copyrights">
     <div class="container">
       <p>
-        &copy; Copyrights <strong>Instant</strong>. All Rights Reserved
+        &copy; Copyright <strong>Instant</strong>. All Rights Reserved
       </p>
       <div class="credits">
         <!--
