--- a/works.html
+++ b/works.html
@@ -43,7 +43,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="index.html">INSTANT</a>
+        <a class="navbar-brand" href="index.html">Roya Moussapour</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -57,6 +57,33 @@
   </div>
 
 
+  <section id="works"></section>
+  <div class="container">
+    <div class="row centered mt mb">
+      <h1>My Portfolio</h1>
+
+      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <a href="works.html"><img src="img/portfolio/folio01.png" class="img-responsive"></a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <a href="works.html"><img src="img/portfolio/folio02.png" class="img-responsive"></a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <a href="works.html"><img src="img/portfolio/folio03.png" class="img-responsive"></a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <a href="works.html"><img src="img/portfolio/folio04.png" class="img-responsive"></a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <a href="works.html"><img src="img/portfolio/folio05.png" class="img-responsive"></a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <a href="works.html"><img src="img/portfolio/folio06.png" class="img-responsive"></a>
+      </div>
+    </div>
+  </div>
+  
+  
   <div id="workwrap">
     <div class="container">
       <div class="row">
