--- a/works.html
+++ b/works.html
@@ -62,9 +62,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-lg-offset-3">
-          <h4>NEW WEBSITE FOR</h4>
-          <h1>INSTANT</h1>
-          <h4>ROLE: LEAD DESIGNER</h4>
+          <h4></h4>
+          <h1>PORTFOLIO</h1>
+          <h4></h4>
         </div>
       </div>
     </div>
@@ -76,8 +76,8 @@
   <section id="works"></section>
   <div class="container">
     <div class="row centered mt mb">
-      <h1>My Portfolio</h1>
-
+      <h1></h1>
+          <h4>A collection of things that matter to me.</h4>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <a href="works.html"><img src="img/portfolio/folio01.png" class="img-responsive"></a>
       </div>
@@ -99,7 +99,7 @@
     </div>
   </div>
   
-  
+ <!-- COMMENTING THIS OUT
   
   <section id="works"></section>
   <div class="container">
@@ -118,6 +118,8 @@
     </div>
   </div>
 
+-->
+  
   <div id="social">
     <div class="container">
       <div class="row centered">
