--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
+  <link href="img/icon1.png" rel="icon">
   <link href="img/icon1.png" rel="icon1">
 
   <!-- Google Fonts -->
