--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
+  <link href="img/icon1.png" rel="icon">
   <link href="img/icon1.png" rel="icon1">
 
   <!-- Google Fonts -->
