--- a/about.html
+++ b/about.html
@@ -84,12 +84,14 @@
     <div class="container">
       <div class="row centered">
         <div class="col-sm-4">
-          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="https://twitter.com/Roya_Moussapour"><i class="fa fa-twitter"></i></a>
         </div>
         <div class="col-sm-4">
-          <a href="#"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/roya-moussapour/"><i class="fa fa-linkedin"></i></a>
         </div>
-
+        <div class="col-sm-4">
+          <a href="mailto:royamoussapour@gmail.com"><i class="fa fa-envelope"></i></a>
+        </div>
       </div>
     </div>
   </div>
