--- a/works.html
+++ b/works.html
@@ -79,13 +79,13 @@
       <h1></h1>
           <h4>A collection of things that matter to me.</h4>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="works.html"><img src="img/portfolio/folio01.png" class="img-responsive"></a>
+        <a href="works.html"><img src="img/me2_logo.jpg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="works.html"><img src="img/portfolio/folio02.png" class="img-responsive"></a>
+        <a href="works.html"><img src="img/Twitter_bird.svg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="works.html"><img src="img/portfolio/folio03.png" class="img-responsive"></a>
+        <a href="works.html"><img src="img/portfolio/nasa.jpg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <a href="works.html"><img src="img/portfolio/folio04.png" class="img-responsive"></a>
