--- a/works.html
+++ b/works.html
@@ -82,7 +82,7 @@
         <a href="works.html"><img src="img/me2_logo.jpg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="works.html"><img src="img/Twitter_bird.svg" class="img-responsive"></a>
+        <a href="works.html"><img src="img/twitter_bird.jpg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <a href="works.html"><img src="img/portfolio/nasa.jpg" class="img-responsive"></a>
