--- a/works.html
+++ b/works.html
@@ -88,13 +88,13 @@
         <a href="works.html"><img src="img/portfolio/nasa.jpg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="works.html"><img src="img/portfolio/folio04.png" class="img-responsive"></a>
+        <a href="works.html"><img src="img/portfolio/portland.jpeg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="works.html"><img src="img/portfolio/folio05.png" class="img-responsive"></a>
+        <a href="works.html"><img src="img/portfolio/katahdin.png" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="works.html"><img src="img/portfolio/folio06.png" class="img-responsive"></a>
+        <a href="works.html"><img src="img/portfolio/bowdoin_logo.jpg" class="img-responsive"></a>
       </div>
     </div>
   </div>
