--- a/works.html
+++ b/works.html
@@ -77,7 +77,7 @@
   <div class="container">
     <div class="row centered mt mb">
       <h1></h1>
-          <h4>A collection of things that matter to me.</h4>
+          <h4>Throughout the last number of years, I've been lucky enough to work on and participate in a number of projects that mean a lot to me. Click below to learn about a few of them!</h4>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <a href="works.html"><img src="img/me2_logo.jpg" class="img-responsive"></a>
       </div>
