--- a/works.html
+++ b/works.html
@@ -85,16 +85,16 @@
         <a href="works.html"><img src="img/twitter_bird.jpg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="works.html"><img src="img/portfolio/nasa.jpg" class="img-responsive"></a>
+        <a href="works.html"><img src="img/nasa.jpg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="works.html"><img src="img/portfolio/portland.jpeg" class="img-responsive"></a>
+        <a href="works.html"><img src="img/portland.jpeg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="works.html"><img src="img/portfolio/katahdin.jpg" class="img-responsive"></a>
+        <a href="works.html"><img src="img/katahdin.jpg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="works.html"><img src="img/portfolio/bowdoin_logo.jpg" class="img-responsive"></a>
+        <a href="works.html"><img src="img/bowdoin_logo.jpg" class="img-responsive"></a>
       </div>
     </div>
   </div>
