--- a/works.html
+++ b/works.html
@@ -94,7 +94,7 @@
         <a href="works.html"><img src="img/katahdin.jpg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="works.html"><img src="img/bowdoin_logo.jpg" class="img-responsive"></a>
+        <a href="works.html"><img src="img/bowdoin2.jpg" class="img-responsive"></a>
       </div>
     </div>
   </div>
