--- a/works.html
+++ b/works.html
@@ -79,7 +79,7 @@
       <h1></h1>
           <h4>Throughout the last number of years, I've been lucky enough to work on and participate in a number of projects that mean a lot to me. Click below to learn about a few of them!</h4>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="works.html"><img src="img/bowdoin2.jpg" class="img-responsive"></a>
+        <a href="works.html"><img src="img/bowdoin_logo.jpg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <a href="works.html"><img src="img/twitter_bird.jpg" class="img-responsive"></a>
