--- a/works.html
+++ b/works.html
@@ -88,6 +88,7 @@
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <a href="works.html"><img src="img/nasa.jpg" class="img-responsive"></a>
       </div>
+    </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <a href="works.html"><img src="img/portland.jpeg" class="img-responsive"></a>
       </div>
