--- a/works.html
+++ b/works.html
@@ -86,7 +86,7 @@
         <a href="works.html"><img src="img/twitter_bird.jpg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="works.html"><img src="img/nasa.jpg" class="img-responsive"></a>
+        <a href="NASA.html"><img src="img/nasa.jpg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <a href="works.html"><img src="img/portland.jpeg" class="img-responsive"></a>
