--- a/NASA.html
+++ b/NASA.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Roya Moussapour</title>
+  <title>NASA Marshall Space Flight Center: Summer 2015</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -48,7 +48,7 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html">Home</a></li>
-          <li class="active"><a href="about.html">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="works.html" class="smoothscroll">Works</a></li>
         </ul>
       </div>
