--- a/me2orchestra.html
+++ b/me2orchestra.html
@@ -71,7 +71,7 @@
     <div class="row centered mt mb">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Me2/Orchestra</h2>
-        <p>In Boston, I perform and volunteer as the concertmaster of the Me2/Orchestra, the world’s only classical music organization aimed towards people who live with mental illness and individuals who support them. It is a group in which people of all walks of life come together with a common goal of reducing the stigma surrounding mental illness.</p>
+        <p>In Boston, I perform and volunteer as the concertmaster of the <a href="https://me2orchestra.org/">Me2/Orchestra</a>, the world’s only classical music organization aimed towards people who live with mental illness and individuals who support them. It is a group in which people of all walks of life come together with a common goal of reducing the stigma surrounding mental illness.</p>
         <p> We perform all around New England; some of my favorite experiences have included our residency the Boston Engagement Center, a day shelter primarily for homeless individuals struggling with mental health and addiction, and performing at the Solomon Carter Fuller Mental Health building, an active mental-health focused hospital facility. </p>
         </div>
       
