--- a/diotc.html
+++ b/diotc.html
@@ -70,11 +70,11 @@
   <div class="container">
     <div class="row centered mt mb">
       <div class="col-lg-8 col-lg-offset-2">
-        <h2>Roya Moussapour</h2>
+        <h2>The Digital Image of the City</h2>
         <p>Through a course called The Digital Image of the City (Taught by Professor Gieseking), I studied Portland, ME as an up and coming city, comparing it to other more developed cities and looking at its infrastructure in comparison. Throughout the course, I pursued a research project on children’s access to playspaces in Portland, inspired by Article 39 of the UN Convention on the Rights of the Child.</p>
         <p> <small> <i> “That every child has the right to rest and leisure, to engage in play and recreational activities appropriate to the age of the child and to participate freely in cultural life and the arts.
           
-            That member governments shall respect and promote the right of the child to participate fully in cultural and artistic life and shall encourage the provision of appropriate and equal opportunities for cultural, artistic, recreational and leisure activity.”  </i> - Article 39, UN Convention on the Rights of the Child (1989) </small> </p>
+            That member governments shall respect and promote the right of the child to participate fully in cultural and artistic life and shall encourage the provision of appropriate and equal opportunities for cultural, artistic, recreational and leisure activity.” - Article 39, UN Convention on the Rights of the Child (1989) </i>  </small> </p>
         <p> I chose to use concentration of playspaces in Portland as a proxy for availability of play opportunities for school-aged children. I used mixed research methods, including transect walks, mental mapping, and GIS mapping, in order to complete my project.</p>
         <p>See my research paper below for more details on my project. </p>
         <embed src="img/Roya_Moussapour_Final_Research_Paper.pdf" type="application/pdf" width="100%" height="600px" />
