--- a/teaching.html
+++ b/teaching.html
@@ -76,7 +76,7 @@
         <p>As part of my teaching internship and coursework, I put together a four week long unit on the physics of sound, using a standards-based curriculum model. I planned for such a unit to be implemented in a classroom similar to the my classroom at King Middle School, a technology education classroom with more typical seats and tables up front and a full woodshop in the back of the room. I incorporated aspects of design, technology, and engineering, aiming for student engagement and excitement throughout each class. </p>
         <p> See below for a copy of the unit I designed for my students. </p>
         <embed src="img/Roya_Moussapour_Final_STA_Plan.pdf" type="application/pdf" width="100%" height="600px" />
-        <p> <i> I have clips of some of my teaching, but due to student privacy and anonymity, I am unable to post them here. Please contact me for more information. </i> </p>
+        <p> <i> <small> I have clips of some of my teaching, but due to student privacy and anonymity, I am unable to post them here. Please contact me for more information. </small> </i> </p>
       </div>
       
     </div>
