Update and rename works.html to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
 
   
   
-  <section id="works"></section>
+  <section id="portfolio"></section>
   <div class="container">
     <div class="row centered mt mb">
       <h1></h1>
