--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html">Home</a></li>
           <li class="active"><a href="about.html">About</a></li>
-          <li><a href="works.html" class="smoothscroll">Works</a></li>
+          <li><a href="Portfolio.html" class="smoothscroll">Portfolio</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
