--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li class="active"><a href="works.html" class="smoothscroll">Works</a></li>
+          <li class="active"><a href="portfolio.html" class="smoothscroll">Portfolio</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
