--- a/portfolio.html
+++ b/portfolio.html
@@ -83,19 +83,19 @@
         <a href="teaching.html"><img src="img/bowdoin2.jpg" class="img-responsive" title="Teaching"></a>
       </div> 
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="twitter.html"><img src="img/twitter_bird.jpg" class="img-responsive"></a>
+        <a href="twitter.html"><img src="img/twitter_bird.jpg" class="img-responsive" title="Teachers on Twitter"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="NASA.html"><img src="img/nasa.jpg" class="img-responsive"></a>
+        <a href="NASA.html"><img src="img/nasa.jpg" class="img-responsive" title="Research at NASA"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="diotc.html"><img src="img/portland.jpeg" class="img-responsive"></a>
+        <a href="diotc.html"><img src="img/portland.jpeg" class="img-responsive" title="Digital Image of the City"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="me2orchestra.html"><img src="img/me2_logo.jpg" class="img-responsive"></a>
+        <a href="me2orchestra.html"><img src="img/me2_logo.jpg" class="img-responsive" title="Me2/Orchestra"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="natureofdata.html"><img src="img/katahdin.jpg" class="img-responsive"></a>
+        <a href="natureofdata.html"><img src="img/katahdin.jpg" class="img-responsive" title="Nature of Data"></a>
       </div>
     </div>
   </div>
