--- a/portfolio.html
+++ b/portfolio.html
@@ -95,7 +95,7 @@
         <a href="me2orchestra.html"><img src="img/me2_logo.jpg" class="img-responsive" title="Me2/Orchestra"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="natureofdata.html"><img src="img/katahdin.jpg" class="img-responsive" title="Nature of Data"></a>
+        <a href="natureofdata.html" title="Nature of Data"><img src="img/katahdin.jpg" class="img-responsive"></a>
       </div>
     </div>
   </div>
