--- a/portfolio.html
+++ b/portfolio.html
@@ -80,22 +80,22 @@
       <h1></h1>
           <h4>Throughout the last number of years, I've been lucky enough to work on and participate in a number of projects that mean a lot to me. Click below to learn about a few of them!</h4>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="teaching.html"><img src="img/bowdoin2.jpg" class="img-responsive" title="Teaching"></a>
+        <a href="teaching.html"><img src="img/bowdoin2.jpg" class="img-responsive"></a>
       </div> 
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="twitter.html"><img src="img/twitter_bird.jpg" class="img-responsive" title="Teachers on Twitter"></a>
+        <a href="twitter.html"><img src="img/twitter_bird.jpg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="NASA.html"><img src="img/nasa.jpg" class="img-responsive" title="Research at NASA"></a>
+        <a href="NASA.html"><img src="img/nasa.jpg" class="img-responsive" ></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="diotc.html"><img src="img/portland.jpeg" class="img-responsive" title="Digital Image of the City"></a>
+        <a href="diotc.html"><img src="img/portland.jpeg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="me2orchestra.html"><img src="img/me2_logo.jpg" class="img-responsive" title="Me2/Orchestra"></a>
+        <a href="me2orchestra.html"><img src="img/me2_logo.jpg" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="natureofdata.html" title="Nature of Data"><img src="img/katahdin.jpg" class="img-responsive"></a>
+        <a href="natureofdata.html"><img src="img/katahdin.jpg" class="img-responsive"></a>
       </div>
     </div>
   </div>
